--- a/css/responsive.css
+++ b/css/responsive.css
@@ -210,7 +210,7 @@
 
   .project-visual img {
     min-width: 0;
-    min-height: 220px;
+    min-height: 0;
   }
 
   .project-card {
